UI improvements, Areas no longer collapsable, new trailer video

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,6 +12,7 @@
   justify-content: start;
   margin-right: 100px;
   width: 100%;
+  padding-bottom: 10px;
 }
 
 .h1 {
