--- a/src/components/IconText.module.css
+++ b/src/components/IconText.module.css
@@ -5,6 +5,8 @@
   align-items: center;
   text-align: left;
   padding-left: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card {
