--- a/src/components/ui/Card.module.css
+++ b/src/components/ui/Card.module.css
@@ -3,6 +3,7 @@
   border-style: solid;
   border-color: rgba(22, 22, 22, 0.6);
   box-shadow: 0 1px 4px rgba(214, 208, 208, 0.2);
+  padding-bottom: 30px;
 }
 
 .textTopLeft {
